--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -116,7 +116,8 @@
               "node_modules/jquery/dist/jquery.min.js"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "assets": [
               "src/assets",
