--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.3",
+    "@angular/animations": "^9.1.7",
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
     "@angular/core": "^9.1.3",
@@ -24,10 +24,11 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "jquery": "^3.5.0",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.3",
